--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="communicate">Communicate</string>
     <string name="下载中心">下载中心</string>
     <string name="todo">TODO</string>
+    <string name="通知中心">通知中心</string>
 </resources>
